# wemake-django-template

./: .gitlab-ci.yml  .readthedocs.yml  cookiecutter.json  setup.cfg
.github/: dependabot.yml
.github/workflows/: hadolint.yml
hooks/: post_gen_project.py
tests/: test_github.sh
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  run  setup.cfg
{{cookiecutter.project_name}}/config/: .env.template
{{cookiecutter.project_name}}/docker/: docker-compose.prod.yml
{{cookiecutter.project_name}}/docker/caddy/: Caddyfile
{{cookiecutter.project_name}}/docker/django/: Dockerfile  ci.sh  gunicorn.sh
{{cookiecutter.project_name}}/docker/web/: Dockerfile  ci.sh  entrypoint.sh  gunicorn.sh
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/docs/pages/template/: development.rst  django.rst  linters.rst  overview.rst  production-checklist.rst  production.rst  testing.rst  troubleshooting.rst
{{cookiecutter.project_name}}/server/settings/: __init__.py
{{cookiecutter.project_name}}/src/server/settings/environments/: development.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: README.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}_web/: asgi.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}_web/apps/main/: admin.py  urls.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}_web/apps/main/logic/: README.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}_web/settings/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}_web/settings/components/: common.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}_web/settings/environments/: development.py  production.py
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/test_{{cookiecutter.package_name}}_web/test_apps/test_main/test_models/: test_blog_post_model.py
{{cookiecutter.project_name}}/tests/test_{{cookiecutter.package_name}}_web/test_apps/test_main/test_models/test_migrations/: test_blog_post_migrations.py
